Sigil v0.1.5 <ADD DATE>
    - tentatively fixed an issue with Sigil crashing on overwriting existing epubs (issue 146)
    - fixed an issue with Sigil crashing on epubs with "date" OPF elements but no value set
    for those elements (InDesign CS4 creates such invalid epubs) (issue #149)
    - fixed an issue with words being merged on TXT import (issue #148)
    - various performance improvements through code profiling and parallelization
    - Linux and Mac builds should now be slightly faster because of new compiler optimizations
    - fixed issue with Sigil incorrectly loading (and therefore subsequently saving) "date"
    OPF elements with "event" attributes (issue 144)

Sigil v0.1.4 2009.10.08.
    - SGF files are now associated with Sigil on Windows (issue #135)
    - SGF files are now associated with Sigil on Mac OS X (issue #10)
    - fixed issue with "Open With" OS actions not working on Macs (issue #111)
    - provided more informative tooltips by following Word 2007 tooltip style (issue #64) 
    - the heading text can now be edited in the TOC Editor (issue #131)
    - the Save As dialog now uses the current filename in the filename field (issue #18)
    - views can now be zoomed (issue #44)
    - Sigil no longer loads flow-specific CSS... this was causing more harm than good; loading 
    flow-specific CSS will be back in 0.2.0.
    - implemented a NEW workaround for a webkit bug causing the first character of a heading
    created after a chapter break to be displayed incorrectly (issue #78) 
    - fixed issue with TOC editor not resolving HTML entities (issue #125)
    - fixed issue with Tidy changing case of attribute names (issue #120)
    - Sigil will from now on check for a newer version on startup and present an informative
    message if such a version is found (issue #67)
    - made SGF importing MUCH faster (issue #119)
    - provided a window icon on Linux
    - providing binary installers for Windows AND LINUX (issue #6)