@@ -60,6 +60,27 @@ QString Utility::GetRandomString( int length )
     return token;
 }
 
+// Returns true if the string is mixed case, false otherwise.
+// For instance, "test" and "TEST" return false, "teSt" returns true.
+// If the string is empty, returns false.
+bool Utility::IsMixedCase( const QString &string )
+{
+    if ( string.isEmpty() || string.length() == 1 )
+
+        return false;
+    
+    bool first_char_lower = string[ 0 ].isLower();
+
+    for ( int i = 1; i < string.length(); i++ )
+    {
+        if ( string[ i ].isLower() != first_char_lower )
+
+            return true;
+    }
+
+    return false;
+}
+
 // Returns a substring of a specified string;
 // the characters included are in the interval: 
 // [ start_index, end_index >
